XMLtoCSV/objects/unpackaged/objects/Sales_Incremental_Transaction_vod__c.object
<CustomObject>
    <description>Similar to the Sales Transaction object. No data is stored in here, but defines the fields and labels for the JDNet fields.</description>
    <fields>
        <fullName>Delivery_Price_vod__c</fullName>
        <description>Delivery Price</description>
        <label>Delivery Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Branch_Id_vod__c</fullName>
        <description>Distributor Branch code of the distributor branch account record.</description>
        <label>Distributor Branch Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Comment_vod__c</fullName>
        <description>Comment on Receipt by distributor</description>
        <label>Distributor Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Id_vod__c</fullName>
        <description>The distributor code. Every drug in Japan must be sold from a distributor, not from a pharmaceutical company. This code indicates which distributor (Wholesaler) sells their product to a Hospital.</description>
        <label>Distributor Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>Unique identified used for data loading.  For JD-NET, this should be the unique JD-NET ID from the sales file.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Id_vod__c</fullName>
        <description>The Hospital code of the hospital account record</description>
        <label>Hospital Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Date_vod__c</fullName>
        <description>The purchase order date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metric_1_vod__c</fullName>
        <description>Metric field in sales file. For JD-NET, this should be the Sales Amount.</description>
        <label>Metric 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_2_vod__c</fullName>
        <description>Metric field in sales file. For JD-NET, this should be the Settlement Amount.</description>
        <label>Metric 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_3_vod__c</fullName>
        <description>Metric field in sales file. For JD-NET, this should be the Delivery Amount.</description>
        <label>Metric 3</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Id_vod__c</fullName>
        <description>The pharmacy code of the pharmacy account record.</description>
        <label>Pharmacy Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_vod__c</fullName>
        <description>Product code. This code indicate SKU (Store Keeping Unit) level product code like Cholecap 120mm.</description>
        <label>Product</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Comment_vod__c</fullName>
        <description>Comment on Receipt by pharmacy</description>
        <label>Receipt Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Date_vod__c</fullName>
        <description>Sales date</description>
        <label>Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Quantity_vod__c</fullName>
        <description>Used to store Sales quantity from JDNet</description>
        <label>Sales Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Price_vod__c</fullName>
        <description>Settlement price</description>
        <label>Settlement Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slip_Number_vod__c</fullName>
        <description>Slip number of each payment.
Unique id of receipt. Wholesaler assign the ID to identify receipt. Single id is used for sales receipt and refund receipt.</description>
        <label>Slip Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slip_Type_vod__c</fullName>
        <description>Indicate slip type sales slip or refund slip</description>
        <label>Slip Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Datetime_vod__c</fullName>
        <description>Date of transaction within pharma company.</description>
        <label>Transaction Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unit_Price_vod__c</fullName>
        <description>Unit price</description>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sales Incremental Transaction</label>
    <nameField>
        <label>Sales Incremental Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Incremental Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>